Add abbreviation filter to legislation endpoint
RISDEV-10578
