# backend/src/main/java/de/bund/digitalservice/ris/search/models/api/parameters/NormsSearchParams.java
@@ -64,6 +64,9 @@ public class NormsSearchParams {
   @Schema(description = MOST_RELEVANT_ON_DESCRIPTION)
   LocalDate mostRelevantOn;
 
+  @Schema(description = "Filters the result set by the given abbreviation.")
+  String abbreviation;
+
   /**
    * Validates the temporal coverage range for the search parameters.
    *
