# frontend/src/public/openapi.json
@@ -360,6 +360,15 @@
             "description" : "Filters the result set so every work returns exactly one expression. Most relevant is defined as : The expression in force on that date if it exists, then the expression that would next be in force if that exists, then the most recent expression that was in force. If other filters are used the work may return 0 expressions due to the most relevant expression being filtered out."
           }
         }, {
+          "name" : "abbreviation",
+          "in" : "query",
+          "description" : "Filters the result set by the given abbreviation.",
+          "required" : false,
+          "schema" : {
+            "type" : "string",
+            "description" : "Filters the result set by the given abbreviation."
+          }
+        }, {
           "name" : "searchTerm",
           "in" : "query",
           "description" : "Searches for the given tokens in searchTerm. If searchTerm contains more than one token, all tokens must be in the document for the document to match.",
